fix a horizontal scroll issue on safari

--- a/dev/scss/base/_reset.scss
+++ b/dev/scss/base/_reset.scss
@@ -4,11 +4,11 @@
 // reset html font family, to prevent a layout issue in some language system (e.g. korean system)
 html { font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
 
+// hide extra elements, (html is for safari)
+html, body { overflow-x: hidden; } 
+
 // set min-width to 320
-body { 
-  min-width: 320px; 
-  overflow-x: hidden; 
-}
+body { min-width: 320px; }
 
 // make images flexible
 img { 
@@ -42,7 +42,7 @@ dl,ul,ol { padding: 0; }
 ol,ul { list-style:none; }
 
 // reset link style
-a { text-decoration: none; color: inherit; }
+a { text-decoration: none; color: map-get($color, 'text'); }
 
 .hidden { display: none; }
 .hidden-checkbox {
